--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,14 @@
-<html>
-    <head>
-        <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-    </head>
-<body>
-    <div id="root"></div>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+   <head>
+       <!-- needs the meta tag for viewport bootstrap -->
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <!-- Latest compiled and minified CSS -->
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+   </head>
+   <body>
+      <div id="root"></div>
+   </body>
 </html>
